--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   grpc: ^3.1.0
   protobuf: ^2.1.0
   collection: ^1.15.0-nullsafety.4
+  logging: ^1.1.0
 
 dev_dependencies:
   lints: ^2.0.0
