--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_bloc: ^8.1.2
   equatable: ^2.0.5
   rxdart: ^0.27.7
+  broadcast_bloc: ^0.1.0-dev.2
 
 dev_dependencies:
   lints: ^2.0.0
